--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -49,7 +49,7 @@
 			<tr><td><h4>Tên khoa học (tên latin)</h4></td></tr>
 			<tr>
 				<td><label>Tên đồng nghĩa: </label></td>
-				<td><input type="text" name="tenDongNghia" class="input-form"  value=""></td>
+				<td><input type="text" id="tenDongNghia" name="tenDongNghia" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Giới(*): </label></td>
