--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -53,56 +53,56 @@
 			</tr>
 			<tr>
 				<td><label>Giới(*): </label></td>
-				<td><input type="text" name="gioi" class="input-form"  value="" required></td>
+				<td><input type="text" id="gioi" name="gioi" class="input-form" value="" required></td>
 			</tr>
 					<tr>
 				<td><label>Ngành(*): </label></td>
-				<td><input type="text" name="nganh" class="input-form"  value="" required></td>
+				<td><input type="text" id="nganh" name="nganh" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Lớp(*): </label></td>
-				<td><input type="text" name="lop" class="input-form"  value="" required="required"></td>
+				<td><input type="text" id="lop" name="lop" class="input-form" value="" required="required"></td>
 			</tr>
 			<tr>
 				<td><label>Phân lớp: </label></td>
-				<td><input type="text" name="phanLop" class="input-form"  value=""></td>
+				<td><input type="text" id="phanLop" name="phanLop" class="input-form" value=""></td>
 			</tr>
 			<tr>
 				<td><label>Bộ(*): </label></td>
-				<td><input type="text" name="bo" class="input-form"  value="" required</td>
+				<td><input type="text" id="bo" name="bo" class="input-form"  value="" required</td>
 			</tr>
 			<tr>
 				<td><label>Phân bộ: </label></td>
-				<td><input type="text" name="phanBo" class="input-form"  value=""></td>
+				<td><input type="text" id="phanBo" name="phanBo" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Liên họ: </label></td>
-				<td><input type="text" name="lienHo" class="input-form"  value=""></td>
+				<td><input type="text" id="lienHo" name="lienHo" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Họ(*): </label></td>
-				<td><input type="text" name="ho" class="input-form"  value="" required</td>
+				<td><input type="text" id="ho" name="ho" class="input-form"  value="" required</td>
 			</tr>
 			<tr>
 				<td><label>Phân họ: </label></td>
-				<td><input type="text" name="phanHo" class="input-form"  value=""></td>
+				<td><input type="text" id="phanHo" name="phanHo" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Tộc: </label></td>
-				<td><input type="text" name="toc" class="input-form"  value=""></td>
+				<td><input type="text" name="toc" id="toc" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Giống(*): </label></td>
-				<td><input type="text" name="giong" class="input-form"  value="" required></td>
+				<td><input type="text" name="giong" id="giong" class="input-form"  value="" required></td>
 			</tr>
 
 			<tr>
 				<td><label>Loài: </label></td>
-				<td><input type="text" class="input-form" name="loai"></td>
+				<td><input type="text" id="loai" class="input-form" name="loai"></td>
 			</tr>
 			<tr>
 				<td><label>Dưới loài/phân loài: </label></td>
-				<td><input type="text" name="duoiLoai" class="input-form"></td>
+				<td><input type="text" id="duoiLoai" name="duoiLoai" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người định tên: </label></td>
@@ -150,7 +150,7 @@
 			</tr>
 			<tr>
 				<td><label>Cơ quan thu mẫu: </label></td>
-				<td><input type="text" name="coQuanThuMau" class="input-form"></td>
+				<td><input type="text" id="coQuanThuMau" name="coQuanThuMau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Phương pháp thu mẫu (*):</label></td>
@@ -253,7 +253,7 @@
 			</tr>
 			<tr>
 				<td><label>Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
-				<td><input type="text" name="coQuanToChucPhanTich" class="input-form"  value="" required></td>
+				<td><input type="text" name="coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
@@ -318,7 +318,7 @@
 			</tr>
 			<tr>
 				<td><label>Cơ quan xử lý, chế tác mẫu:</label></td>
-				<td><input type="text" name="coQuanXuLy" class="input-form"  value=""></td>
+				<td><input type="text" name="coQuanXuLy" class="input-form" id="coQuanXuLy" value=""></td>
 			</tr>
 			<tr>
 				<td><label>Hình ảnh sau chế tác:</label></td>
@@ -327,11 +327,11 @@
 			<tr><td><h4>Thông tin DNA</h4></td></tr>
 			<tr>
 				<td><label>Bộ phận lấy mẫu DNA (da, lông, máu, xương...):</label></td>
-				<td><input type="text" name="viTriLayMauDNA" class="input-form"  value=""></td>
+				<td><input type="text" id="boPhanLayMauDNA" name="boPhanLayMauDNA" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Trạng thái giữ mẫu DNA (khô, nước...):</label></td>
-				<td><input type="text" name="mauDNA" class="input-form"  value=""></td>
+				<td><input type="text" id="trangThaiGiuMauDNA" name="trangThaiGiuMauDNA" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Vùng gen phân tích</label></td>
@@ -388,7 +388,7 @@
 			</tr>
 			<tr>
 				<td><label>Cơ quan nhập mẫu vật: </label></td>
-				<td><input type="text" name="coQuanNhapVatMau" class="input-form"  value=""></td>
+				<td><input type="text" name="coQuanNhapVatMau" class="input-form" id="coQuanNhapVatMau" value=""></td>
 			</tr>
 			<tr>
 				<td><label>Hình thức nhập mẫu:</label></td>
