add manage post

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -295,7 +295,7 @@
 					</table>	
 				</td>
 			</tr>
-			<tr><td><h4>Xử lý chế tác</h4></td></tr>
+			<tr><td colspan="2"><h4>Xử lý chế tác</h4></td></tr>
 			<tr>
 				<td><label>Thuộc tính Xử lý chế tác:</label></td>
 				<td><input type="text" name="thuocTinhXuLy" class="input-form"  value=""></td>
@@ -324,7 +324,7 @@
 				<td><label>Hình ảnh sau chế tác:</label></td>
 				<td><input type="text" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf" value=""></td>
 			</tr>
-			<tr><td><h4>Thông tin DNA</h4></td></tr>
+			<tr><td colspan="2"><h4>Thông tin DNA</h4></td></tr>
 			<tr>
 				<td><label>Bộ phận lấy mẫu DNA (da, lông, máu, xương...):</label></td>
 				<td><input type="text" id="boPhanLayMauDNA" name="boPhanLayMauDNA" class="input-form"  value=""></td>
@@ -418,16 +418,12 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label>Hiến tặng</label></td>
-				<td><input type="text" name="hienTang" class="input-form"  value=""></td>
-			</tr>
-			<tr>
 				<td><label>Khu lưu trữ mẫu:</label></td>
 				<td><input type="text" name="khuLuuTruMau" class="input-form"  value=""></td>
 			</tr>
 			<tr>
-				<td><label>Nơi lưu trữ(*):</label></td>
-				<td><input type="text" name="noiLuuTru" class="input-form"  value="" required></td>
+				<td><label>Nơi lưu trữ:</label></td>
+				<td><input type="text" name="noiLuuTru" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Giấy phép nhập mẫu:</label></td>
