--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -274,7 +274,7 @@
 			<h3 class="h3-title">6. NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 			<tr>
 				<td><label>Ảnh mẫu vật(*):</label></td>
-				<td><input type="file" multiple name="loaiHinhNguonGoc" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf"  value="" required></td>
+				<td><input type="file" multiple name="anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Hình ảnh mẫu ngoài thực địa:</label></td>
@@ -436,11 +436,11 @@
 			</tr>
 			<tr>
 				<td><label>Người lập phiếu MV (*):</label></td>
-				<td><input type="text" name="nguoiLapPhieuMauVat" class="input-form"  value="" required></td>
+				<td><input type="text" name="nguoiNhapPhieuMauVat" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Người nhập vào phần mềm:</label></td>
-				<td><input type="text" name="nguoiLapVaoPhanMem" class="input-form"  value=""></td>
+				<td><input type="text" name="nguoiNhapVaoPhanMem" class="input-form"  value=""></td>
 			</tr>
 		</table>
 
