--- a/views/display.ejs
+++ b/views/display.ejs
@@ -73,9 +73,13 @@
 						}
 					}
 					else {
+						// console.log(Object.keys(obj1));
 						diffs = Object.keys(obj1).filter(function (element) {
 							if (obj1[element] instanceof Array){
 								return (obj1[element].length > 0);
+							}
+							if (obj1[element] instanceof Date){
+								return true;
 							}
 							if (obj1[element] instanceof Object){
 								return Object.keys(obj1[element]).length > 0
