--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -1,3 +1,9 @@
 <div class="container map-detail" style="margin-top: 50px;">
-	<p>Content</p>
+	<div class="list-group" ng-repeat="(key, post) in allPostAnimal">
+		<li class="list-group-item">
+			<span>{{post._id}}</span>
+			<a class="btn btn-success" href="#!/dong-vat/chinh-sua/{{post._id}}" role="button">Chỉnh sửa</a>
+			<a class="btn btn-danger" ng-click="deletePost(post._id)" href="" role="button">Xóa bài đăng</a>
+		</li>
+	</div>
 </div>
