--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -1,4 +1,4 @@
-<div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'success'">
+<div class="container map-detail" style="margin-top: 50px;">
 	<form id="form-animal">
 		<center><h2>Cơ sở dữ liệu thực vật</h2></center>
 		<table>
@@ -456,8 +456,4 @@
 		</table>
 	</form>
 	<button type="button" ng-click="addPost()" class="btn btn-success btn-lg">Thêm</button>
-</div>
-
-<div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'error'">
-	<h2>Trang web khong tim thay</h2>
 </div>
