--- a/views/display.ejs
+++ b/views/display.ejs
@@ -39,6 +39,9 @@
 						}
 						return false;
 					}
+					if ((prop1 instanceof Date) && (prop2 instanceof Date)){
+						return (prop1 - prop2 == 0);
+					}
 					if ((typeof(prop1) == typeof(prop2)) && (typeof(prop1) == 'object')){
 						if (Object.keys(prop1).length != Object.keys(prop2).length){
 							return true;
@@ -67,9 +70,12 @@
 						}
 
 						for(var i in obj2){
-							if (propDiff(obj1, obj2, i)){
-								diffs.push(i);
+							if (diffs.indexOf(i) < 0){
+								if (propDiff(obj1, obj2, i)){
+									diffs.push(i);
+								}
 							}
+							
 						}
 					}
 					else {
