fix type of maps property

--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -231,7 +231,7 @@
 			</tr>
 			<tr>
 				<td><label>Bản đồ:</label></td>
-				<td><input type="text" ng-model="animal.banDo" name="banDo" class="input-form" ></td>
+				<td><input type="file" ng-model="animal.banDo" name="banDo" class="input-form" ></td>
 			</tr>
 		</table>
 		<table>
