fix some properties

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -362,7 +362,7 @@
 				<td><label>Phân bố trên thế giới (nếu có):</label></td>
 				<td>
 					<input type="text" name="phanBoTrenTheGioiStr" class="input-form"  value="">
-					<input type="file" multiple name="phanBoTheGioiFile">
+					<input type="file" multiple name="phanBoTrenTheGioiFile">
 				</td>
 			</tr>
 			<tr>
