--- a/views/log.ejs
+++ b/views/log.ejs
@@ -49,15 +49,15 @@
 									<h4><%= (date != 'Invalid Date') ? date : '' %></h4>
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-									<h4><%= logs[i].userFullName %></h4>
+									<a href="<%= path + '?user=' + logs[i].userId %>"><h4><%= logs[i].userFullName %></h4></a>
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 									<% if (action == 'create') { %>
-										<h4>Tạo mới</h4>
+										<a href="<%= path + '?action=create' %>"><h4>Tạo mới</h4></a>
 									<% } else if (action == 'update') { %>
-										<h4>Cập nhật</h4>
+										<a href="<%= path + '?action=update' %>"><h4>Cập nhật</h4></a>
 									<% } else if (action == 'delete') { %>
-										<h4>Xóa</h4>
+										<a href="<%= path + '?action=delete' %>"><h4>Xóa</h4></a>
 									<% } %>
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
